# Go

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build.sh  travis_build.sh
ext/googletest/: CMakeLists.txt
report/: UseCaseGameProcess.mdj  gocnfig
report/UMLdiagrams/: Sequence.mdj
report/UMLdiagrams/Component/: Component.mdj
report/UMLdiagrams/Sequence/: Sequence.mdj
report/UMLdiagrams/UseCase/: GameOrganisation.mdj  UseCaseGameOrganisaton.mdj  UseCaseGameProcess.mdj
report/doxygen/: gocnfig  goconfig
report/doxygen/html/: annotated.html  api_8h_source.html  class_a_p_i-members.html  class_a_p_i.html  dir_08d237fc27d4ecd563f71c5d52f2fecc.html  dir_0bdd803e69e81ea65044385a46536dde.html  files.html  functions.html  functions_func.html
report/doxygen/html/search/: all_1.js  functions_0.js  functions_2.js  functions_3.js  searchdata.js
report/doxygen/latex/: refman.tex
report/html/: api_8h_source.html  class_a_p_i-members.html  class_a_p_i.html  classes.html  dir_f69671022c85de8676a1708eca4bf2e5.html  functions.html  functions_func.html  index.html
report/html/search/: all_0.js  classes_0.js  searchdata.js
report/latex/: refman.tex
report/main/: main.tex  settings.tex  titlepage.tex
report/main/listings/: hell_o.c
review/: 1.Arch_review.md  demo_4_notes.md  demo_6_notes.md
sources/: CMakeLists.txt  Go.pro
sources/Go/: CMakeLists.txt  Go.pro
sources/Go/AI/: AI.pro  ai.cpp
sources/Go/CUI/: CUI.pro  main.cpp
sources/Go/Engine/: Engine.pro  api.cpp  api.h  engine.h
sources/Go/FunctionalTests/: FunctionalTests.pro  functionalteststest.cpp
sources/Go/GUI/: GUI.pro
sources/Go/GoCUI/: CMakeLists.txt  main.cpp
sources/Go/GoEngine/: CMakeLists.txt  GoEngine.pro  GoEngineInterface.cpp  GoEngineInterface.h  enums.h
sources/Go/XiGo/: XiGo.pro  XiGoInterface.cpp  XiGoInterface.h
sources/Go/engine/: engine.pro
sources/GoCUI/: CMakeLists.txt  GoCUI.pro  GoGame.cpp  GoGame.h  Help.cpp  Help.h  InitBoards.h  enums.h  main.cpp
sources/GoEngine/: Board.cpp  Board.h  BoundsViolationException.h  CMakeLists.txt  GoEngine.pro  GoEngineAPI.cpp  GoEngineAPI.h  GoEngineInterface.cpp  GoEngineInterface.h  IncorrectDiagonalException.h  Point.cpp  Point.h  Stone.cpp  Stone.h  enums.h
sources/GoEngine/Exceptions/: IncorrectDiagonalException.h
sources/GoEngine/Model/: Board.cpp  Board.h  GoEngineInterface.cpp  GoEngineInterface.h  Point.cpp  Point.h  Stone.cpp  Stone.h  enums.h
sources/GoEngine/Model/Exceptions/: IncorrectDiagonalException.h
sources/GoEngine/Rules/: GameProcess.cpp  GameProcess.h  Motion.cpp  Motion.h  Move.cpp  Move.h  MoveBeyondBoardException.h  MoveRepeatException.h  MoveToDieException.h  MoveToNotEmtyPointException.h  Moves.cpp  Moves.h  ScoreCalculator.cpp  ScoreCalculator.h
sources/GoEngine/Rules/Exceptions/: MoveException.h  MoveOutsideTheBoardException.h  MoveRepeatException.h  MoveToDieException.h  MoveToNotEmtyPointException.h
sources/GoGUI/: CMakeLists.txt  Counter.cpp  Counter.h  main.cpp
sources/GoGUI/Internationalization/: i18n_ru.ts
sources/GoGUI/Resources/: go.rc  resources.qrc
sources/GoGUI/Windows/: Board.cpp  Board.h  Game.cpp  Game.h  GameWindow.cpp  GameWindow.h  Help.cpp  Help.h  HelpWindow.cpp  HelpWindow.h  Menu.cpp  Menu.h  MenuWindow.cpp  MenuWindow.h  Settings.cpp  Settings.h  SettingsWindow.cpp  SettingsWindow.h  StartGame.cpp  StartGame.h
sources/GoGUI/Windows/Widgets/: BoardWidget.cpp  BoardWidget.h
sources/GoTests/: CMakeLists.txt
sources/GoTests/FunctionalTest/: CMakeLists.txt  InitBoards.h  functionalTest.cpp  functionalTest.pro
sources/GoTests/UnitTests/: BoardTest.cpp  CMakeLists.txt  GameProcessTest.cpp  MotionTest.cpp  MoveTest.cpp  MovesTest.cpp  PointTest.cpp  ScoreCalculatorTest.cpp  StoneTest.cpp  boardTest.cpp  boardTest.pro
sources/engine/: API.h  Board.cpp  Board.h  CMakeLists.txt  EmptyMovesListException.h  Engine.cpp  Engine.h  GameIsOverException.h  GoEngine.cpp  GoEngine.h  LastMoveGettingException.h  LastMoveNotFoundException.h  Move.h  MoveAnalyser.cpp  MoveAnalyser.h  MoveChecker.cpp  MoveChecker.h  MoveOutsideTheBoardException.h  MoveToDieException.h  Moves.cpp  Moves.h  MovesMaker.cpp  MovesMaker.h  PenultimateMoveNotFoundException.h  Point.cpp  Point.h  PointLocation.h  PointLocationNotFoundException.h  Stone.h  StoneGettingException.h  StoneNotFoundException.h
sources/engine/exceptions/: LastMovePoppingException.h  MoveRepeatException.h  MoveToNotEmptyPointException.h  PenultimateMoveGettingException.h  PointLocationGettingException.h  StoneRemovingException.h  StoneSettingException.h
sources/tests/: CMakeLists.txt  TestBoard.cpp  TestGoEngine.cpp  TestMoveAnalyser.cpp  TestMoves.cpp  TestMovesMaker.cpp  TestPoint.cpp
training/: CMakeLists.txt
training/Facade/: CMakeLists.txt
training/Singleton/: CMakeLists.txt
